src/main/java/com/example/project/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Title
  labels:
    app: Title
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Title
  template:
    metadata:
      name: Title
      labels:
        app: Title
    spec:
      containers:
        - name: Title
          image: Image
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
