src/main/java/com/example/project/resources/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Title
  labels:
    app: Title
spec:
  containers:
    - name: Title
      image: Image
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
