src/main/java/com/example/project/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Title
spec:
  selector:
    app: Title
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
